--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,8 +23,12 @@ jobs:
         cache-dependency-path: frontend/package-lock.json
     - name: Install frontend dependencies
       run: cd frontend && npm ci
+      env:
+        CYPRESS_INSTALL_BINARY: 0
     - name: Build frontend
       run: cd frontend && npm run build
+      env:
+        CYPRESS_INSTALL_BINARY: 0
     - name: Deploy to Netlify
       uses: nwtgck/actions-netlify@v3.0
       with:
