--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,6 +29,8 @@ jobs:
       run: cd frontend && npm run build
       env:
         CYPRESS_INSTALL_BINARY: 0
+        VITE_API_URL: ${{ secrets.VITE_API_URL }}
+        VITE_SENTRY_DSN: ${{ secrets.VITE_SENTRY_DSN }}
     - name: Deploy to Netlify
       uses: nwtgck/actions-netlify@v3.0
       with:
